# ask-michal

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
client/: api.py  auth.py  main.py  ui.py
scripts/: ingest_kb.py
server/: config.py  database.py  main.py  models.py
server/ai/: engine.py  prompts.py
server/api/: admin.py  routes.py  schemas.py
server/auth/: jwt.py  oauth.py
server/rag/: ingest.py  retriever.py
server/security/: filters.py
server/static/: chat.html  home.html
tests/: test_api.py  test_rag.py  test_security_filters.py
